--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ header.active a{
 }
 
 .custom-shape-divider-bottom-1660841500 .shape-fill {
-    fill: #FFFFFF;
+    fill: #EDF6FF;
 }
 .header-area h3{
 	font-size: 30px;
@@ -395,7 +395,7 @@ header.active a{
 	display: flex;
 	width: 100%;
 	padding: 100px 0;
-	background:#EDF6FF ;
+	background:#fff ;
   }
   .all-entry{
 	width: 100%;
@@ -501,17 +501,26 @@ header.active a{
 	background: #EDF6FF;
 	padding: 100px 0;
 }
+.container2{
+	width: 100%;
+	padding: 0 50px;
+}
+.mar-bottom{
+	margin-bottom: 30px;
+}
 .portfolio-img{
 	width: 100%;
-	height: 200px;
+	background: #fff;
+	padding: 20px;
 	margin-bottom: 20px;
-	display: flex;
-	align-items: center;
 	box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    border: 3px #3C486B solid;
 	border-radius: 4px;
 	overflow: hidden;
+	height: 100%;
 	position: relative;
+}
+.portfolio-img p{
+	padding: 20px 0 0;
 }
 
 .portfolio-img img{
