--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,8 @@ header.active a{
 
 }
 .skill-box{
-	width: 49%;
+	width: 70%;
+	margin: 0 auto;
 	background-color: #3C486B;
 	padding: 40px;
 	margin-bottom: 20px;
@@ -376,8 +377,15 @@ header.active a{
 	display: inline-block;
 	margin-bottom: 30px;
 }
-.skill-box ul li{
-	margin-bottom: 10px;
+.skill-box ul li {
+    margin-top: 10px;
+    /* margin-bottom: 10px; */
+    color: #fff;
+    border-bottom: 1px #fff solid;
+    padding: 10px 0;
+}
+.skill-box ul li span{
+	margin-left: 5px;
 	font-weight: 600;
 	color: #fff;
 }
