--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,9 @@ header.active a{
     border-bottom: 1px #fff solid;
     padding: 10px 0;
 }
+.language ul li{
+	font-weight: 600;
+}
 .skill-box ul li span{
 	margin-left: 5px;
 	font-weight: 600;
